Corrected Latin. Hid Map on Mobile.

--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body{
   align-items: center;
   z-index: 9;
   background: #1a1a1a;
+  /* position: -webkit-sticky; */
+  /* position: static; */
 } 
 
 .link-group{
@@ -98,8 +100,38 @@ body{
   opacity: 0;
 }
 
+
+    /* @media screen and (max-width: 600px) {
+      .navbar .link:not(:first-child) {
+        display: none;
+      }
+      .navbar .link-group {
+        float: right;
+        display: list-item;
+        width: -50em;
+      }
+    }
+
+@media screen and (max-width: 667px) {
+  .project-container {
+      display: flex;
+      flex-direction: column;
+      max-width: 100% !important;
+      overflow-x: scroll !important;
+      overflow-y: scroll;
+  }
+  .project-content {
+  }
+} */
+
+/* @media only screen and (max-width: 620px) {
+  .project-section.active {
+    width: 100%;
+  }
+} */
+
 .project-heading{
-  font-size: 100px;
+  font-size: 80px;
   background: #252525;
   text-transform: capitalize;
   text-align: center;
@@ -172,18 +204,24 @@ body{
 }
 
 .project-btn-grp{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+}
+
+/* .project-btn-grp{
   display: flex;
   align-items: center;
   justify-content: space-around;
-}
+} */
 
 .project-btn{
   height: 40px;
   text-transform: capitalize;
   font-size: 18px;
   border: none;
-  background: black;
-  color: white;
+  background: #000;
+  color: #fff;
   cursor: pointer;
 }
 
@@ -484,6 +522,12 @@ body{
   border: 2px solid white;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
+}
+
+@media (max-width: 667px) {
+  .map {
+    display: none;
+  }
 }
 
 .map iframe{
